use Path and add recover to single chronicle dao